force-app/main/default/objects/R_le__c/R_le__c.object-meta.xml
<CustomObject>
    <label>Rôle EMLYON</label>
    <nameField>
        <label>Nom du contact</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rôles EMLYON</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>