force-app/main/default/objects/R_le__c/fields/Categorie_role__c.field-meta.xml
<CustomField>
    <fullName>Categorie_role__c</fullName>
    <label>Catégorie rôle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apprentissage</fullName>
            </value>
            <value>
                <fullName>Capital raising</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
            <value>
                <fullName>Conseils d&apos;Administration</fullName>
            </value>
            <value>
                <fullName>Diplômés</fullName>
            </value>
            <value>
                <fullName>Direction Entreprises</fullName>
            </value>
            <value>
                <fullName>EEE sur mesure</fullName>
            </value>
            <value>
                <fullName>EML-EXEC</fullName>
            </value>
            <value>
                <fullName>Employabilité</fullName>
            </value>
            <value>
                <fullName>Incubateurs</fullName>
            </value>
            <value>
                <fullName>Jury</fullName>
            </value>
            <value>
                <fullName>Partenariat et Fondation</fullName>
            </value>
            <value>
                <fullName>Stages</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>