force-app/main/default/objects/R_le__c/fields/convsta_suiveur__c.field-meta.xml
<CustomField>
    <fullName>convsta_suiveur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>convsta_suiveur</label>
    <type>Checkbox</type>
</CustomField>