force-app/main/default/objects/R_le__c/fields/isStageOrSuiveur__c.field-meta.xml
<CustomField>
    <fullName>isStageOrSuiveur__c</fullName>
    <formula>IF(INCLUDES(Liste_r_le__c, &apos;SUIVEUR OU MAITRE DE STAGE&apos;), 
			true, 
			false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isStageOrSuiveur</label>
    <type>Checkbox</type>
</CustomField>