force-app/main/default/objects/R_le__c/fields/Liste_r_le__c.field-meta.xml
<CustomField>
    <fullName>Liste_r_le__c</fullName>
    <label>Liste rôle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Categorie_role__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1kubator Lyon</fullName>
            </value>
            <value>
                <fullName>50 partners</fullName>
            </value>
            <value>
                <fullName>AD’OCC</fullName>
            </value>
            <value>
                <fullName>Agoranov</fullName>
            </value>
            <value>
                <fullName>Alter’Incub</fullName>
            </value>
            <value>
                <fullName>Ancien BOURSIER EMLYON</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Astuce Lycéens</fullName>
            </value>
            <value>
                <fullName>Ancien Membre BDA</fullName>
            </value>
            <value>
                <fullName>Ancien Membre BDE</fullName>
            </value>
            <value>
                <fullName>Ancien Membre BDS</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Beaux Cuis&apos;</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Club Voile</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Corpo</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Déclic</fullName>
            </value>
            <value>
                <fullName>Ancien Membre EM&apos;icrocrédit</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Forum</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Goût&apos;R&apos;Mets</fullName>
            </value>
            <value>
                <fullName>Ancien Membre I LINK</fullName>
            </value>
            <value>
                <fullName>Ancien Membre JET</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Junior Conseil</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Ligne 2 Mire</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Numérik</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Opening</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Petit Paumé</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Planet &amp; Co</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Radio Activ</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Raid Hannibal</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Ski Club</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Solidari&apos;Terre</fullName>
            </value>
            <value>
                <fullName>Ancien Membre Sup de Côteaux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>