force-app/main/default/objects/R_le__c/fields/nom_contact__c.field-meta.xml
<CustomField>
    <fullName>nom_contact__c</fullName>
    <label>Nom du contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>