force-app/main/default/objects/R_le__c/fields/Role_de_prescripteur_potentiel__c.field-meta.xml
<CustomField>
    <fullName>Role_de_prescripteur_potentiel__c</fullName>
    <description>Champ technique qui indique si le Rôle EMLyon est un rôle de &quot;Prescripteur potentiel&quot;. Utilisé pour le calcul du champ roll up &quot;Rôle EML Prescripteur potentiel&quot; sur l&apos;objet Contact.</description>
    <formula>IF(
			AND(ISPICKVAL(Categorie_role__c, &quot;EML-EXEC&quot;), INCLUDES(Liste_r_le__c, &quot;Prescripteur potentiel&quot;)),
				True,
				False
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rôle de prescripteur potentiel</label>
    <type>Checkbox</type>
</CustomField>