force-app/main/default/objects/R_le__c/listViews/R_le_EML_Stage.listView-meta.xml
<ListView>
    <fullName>R_le_EML_Stage</fullName>
    <columns>NAME</columns>
    <columns>Categorie_role__c</columns>
    <columns>convsta_suiveur__c</columns>
    <columns>Contact__c</columns>
    <columns>Liste_r_le__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Categorie_role__c</field>
        <operation>equals</operation>
        <value>Stages</value>
    </filters>
    <label>Rôle EML : Stage</label>
</ListView>