force-app/main/default/objects/R_le__c/listViews/roles_employabilite.listView-meta.xml
<ListView>
    <fullName>roles_employabilite</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Categorie_role__c</columns>
    <columns>Liste_r_le__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Categorie_role__c</field>
        <operation>equals</operation>
        <value>Employabilité</value>
    </filters>
    <label>Rôles Employabilité</label>
    <language>fr</language>
    <sharedTo>
        <group>BDD</group>
        <role>Employabilit</role>
    </sharedTo>
</ListView>