force-app/main/default/objects/R_le__c/listViews/SM_R_le_sur_mesure.listView-meta.xml
<ListView>
    <fullName>SM_R_le_sur_mesure</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Categorie_role__c</field>
        <operation>equals</operation>
        <value>EEE sur mesure</value>
    </filters>
    <label>SM_Rôle sur-mesure</label>
</ListView>